fix: enhancement map on mobile

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -31,7 +31,7 @@ img.emoji {
     width: 1em;
     margin: 0 .05em 0 .1em;
     vertical-align: -0.1em;
- }
+}
 
 .semi-bold {
     font-weight: 600;
@@ -55,44 +55,48 @@ img.emoji {
 }
 
 @media (max-width: 1023px){
-  h1 { 
-      font-size: 4.8rem; 
-  }
-  
-  h2 { 
-    font-size: 3.3rem; 
-  }
-  
-  p  { 
-    font-size: 2.25rem; 
-  }
-  
-  #nav-link {
-    font-size: 2.5rem;
-  }
+    h1 { 
+        font-size: 4.8rem; 
+    }
 
-  .navbar-brand {
-      font-size: 3.8rem;
-  }
+    h2 { 
+        font-size: 3.3rem; 
+    }
 
-  .btn {
-      font-size: 2.25rem;
-  }
+    p  { 
+        font-size: 2.25rem; 
+    }
 
-  figcapture {
-      font-size: 2rem;
-  }
+    #nav-link {
+        font-size: 2.5rem;
+    }
 
-  li {
-      font-size: 2rem !important;
-  }
+    .navbar-brand {
+        font-size: 3.8rem;
+    }
 
-  footer {
-      font-size: 1.25rem !important;
-  }
+    .btn {
+        font-size: 2.25rem;
+    }
 
-  .navbar-toggler {
-      width: 6rem;
-      height: 5rem;
-  }
+    figcapture {
+        font-size: 2rem;
+    }
+
+    li {
+        font-size: 2rem !important;
+    }
+
+    footer {
+        font-size: 1.25rem !important;
+    }
+
+    .navbar-toggler {
+        width: 6rem;
+        height: 5rem;
+    }
+
+    .leaflet-popup-content-wrapper {
+        font-size: 1.6rem;
+    }
 }
